--- a/kaffeTests/kaffeTests.csproj
+++ b/kaffeTests/kaffeTests.csproj
@@ -51,6 +51,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="CortadoTests.cs" />
+    <Compile Include="FlatWhiteTests.cs" />
     <Compile Include="KaffeTests.cs" />
     <Compile Include="LatteTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
